Fix gap issue

--- a/app/(routes)/image-printer/page.module.css
+++ b/app/(routes)/image-printer/page.module.css
@@ -99,6 +99,7 @@
   .pagesContainer {
     display: grid;
     grid-template-columns: 1fr;
+    gap: 0;
   }
 
   .page {
